placement: keep the titlebar in the screen with centered placement

...even if the window is larger than the screen.

BUG: 489500